syntax = "proto3";
package proto;
option go_package = "github.com/bdreece/hopper/pkg/proto";

import "google/protobuf/timestamp.proto";
import "device.proto";
import "tenant.proto";

message Model {
  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;

  string uuid = 4;
  string name = 5;
  optional string description = 6;

  uint32 tenant_id = 7;
}

message Models { repeated Model models = 1; }

message GetModelRequest {
  oneof where {
    string uuid = 1;
    GetDeviceRequest device = 2;
  }
}

message GetModelsRequest {
  oneof where { GetTenantRequest tenant = 1; }
}